--- a/store/templates/store/fake_store_products.html
+++ b/store/templates/store/fake_store_products.html
@@ -46,7 +46,7 @@ document.addEventListener('DOMContentLoaded', function() {
                         <hr class="my-2 border-gray-200">
                         <div class="flex justify-between items-center mt-auto">
                             <span class="text-xl font-bold text-gray-900">${product.price.toFixed(2)}</span>
-                            <a href="/api-productos/${product.id}/" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-3 rounded-md text-sm transition duration-300">Ver Detalles</a>
+                            <a href="/store/api-productos/${product.id}/" class="bg-blue-500 hover:bg-blue-600 text-white font-semibold py-2 px-3 rounded-md text-sm transition duration-300">Ver Detalles</a>
                         </div>
                     </div>
                 </div>
